# spell_checker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt  spell_checker.cpp  spell_checker.h  tools.h
